Update style to fix an overflow issue

--- a/src/components/Sidebar/GithubConnection.less
+++ b/src/components/Sidebar/GithubConnection.less
@@ -17,9 +17,16 @@
     margin-bottom: 5px;
 
     a {
+      white-space: nowrap;
+      overflow: hidden;
+      max-width: 150px;
       color: #444;
+      display: inline-block;
+      text-overflow: ellipsis;
       word-wrap: break-word;
     }
+
+
 
     .task {
       a {
